--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,17 @@ black==21.6b0
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
+Flask-Cors==3.0.10
+gunicorn==20.0.4
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 mypy-extensions==0.4.3
 pathspec==0.8.1
-pdf2image==1.15.1
 Pillow==8.2.0
+PyMuPDF==1.18.14
 pytesseract==0.3.7
 regex==2021.4.4
+six==1.16.0
 toml==0.10.2
 Werkzeug==2.0.1
